# rpg_game

./: .gitignore  Cargo.toml  Cargo_seamless.toml  Cargo_simple.toml  README.md  ai_prompt.txt  minimal_start.rs  set_utf8.ps1  setup_guide.md  start_here.bat
data/: game_config.json  world_config.json
data/maps/: desert_town.yaml  forest_map.yaml
data/maps/chunks/: forest_0_0.yaml  forest_0_1.yaml  forest_0_2.yaml  forest_1_2.yaml  forest_2_0.yaml  forest_2_1.yaml  forest_2_2.yaml
data/monsters/: desert_monsters.yaml  forest_monsters.yaml  forest_monsters_en.yaml
data/sprites/: character_sprites.json  desert_sprites.json
data/templates/: map_template.yaml  monster_template.yaml
docs/: HANDOVER_FINAL.md
src/: biome_system.rs  chunk_system.rs  main.rs  main_biome_test.rs  main_combat.rs  main_macroquad.rs  main_seamless.rs  main_seamless_fixed.rs  main_with_loader.rs  main_with_map.rs  sprite_system.rs
